force-app/main/default/objects/Develop_Task__c/fields/Actually_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Actually_Complete_Date__c</fullName>
    <label>Actually Complete Date</label>
    <type>Date</type>
</CustomField>