force-app/main/default/objects/Develop_Task__c/fields/ActuallyStartDate__c.field-meta.xml
<CustomField>
    <fullName>ActuallyStartDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>