force-app/main/default/objects/Develop_Task__c/fields/Complexity__c.field-meta.xml
<CustomField>
    <fullName>Complexity__c</fullName>
    <label>Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <color>#78C953</color>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <color>#E27001</color>
                <label>Medium</label>
            </value>
            <value>
                <fullName>High</fullName>
                <color>#FF0000</color>
                <label>High</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>