force-app/main/default/objects/Develop_Task__c/fields/Consolidador__c.field-meta.xml
<CustomField>
    <fullName>Consolidador__c</fullName>
    <label>Consolidador</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Projeto__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>APLICATIVO</fullName>
            </value>
            <value>
                <fullName>APROVAÇÃO</fullName>
            </value>
            <value>
                <fullName>ÁRVORE DE DECISÃO</fullName>
            </value>
            <value>
                <fullName>CANAIS DE ATENDIMENTO</fullName>
            </value>
            <value>
                <fullName>CARGA</fullName>
            </value>
            <value>
                <fullName>CATEGORIAS</fullName>
            </value>
            <value>
                <fullName>CHECKOUT</fullName>
            </value>
            <value>
                <fullName>CLASSE DE TESTE</fullName>
            </value>
            <value>
                <fullName>CONFIGURAÇÃO</fullName>
            </value>
            <value>
                <fullName>DASHBOARD</fullName>
            </value>
            <value>
                <fullName>GRUPO DE CONTAS</fullName>
            </value>
            <value>
                <fullName>LAYOUT</fullName>
            </value>
            <value>
                <fullName>LIGHTNING</fullName>
            </value>
            <value>
                <fullName>MOBILE</fullName>
            </value>
            <value>
                <fullName>OBJETO</fullName>
            </value>
            <value>
                <fullName>OMNI-CHANNEL</fullName>
            </value>
            <value>
                <fullName>PERFIL</fullName>
            </value>
            <value>
                <fullName>PRODUTOS</fullName>
            </value>
            <value>
                <fullName>RELATORIO</fullName>
            </value>
            <value>
                <fullName>SETUP</fullName>
            </value>
            <value>
                <fullName>SLA</fullName>
            </value>
            <value>
                <fullName>TRIGGER</fullName>
            </value>
            <value>
                <fullName>VENDEDORES/MARKETPLACE</fullName>
            </value>
            <value>
                <fullName>VISUAL</fullName>
            </value>
            <value>
                <fullName>WORKFLOW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>