force-app/main/default/objects/Develop_Task__c/fields/Elemento__c.field-meta.xml
<CustomField>
    <fullName>Elemento__c</fullName>
    <label>Elemento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Consolidador__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ÁRVORE DE DECISÃO</fullName>
            </value>
            <value>
                <fullName>AURA</fullName>
            </value>
            <value>
                <fullName>BOTÕES</fullName>
            </value>
            <value>
                <fullName>CARGA DE DADOS</fullName>
            </value>
            <value>
                <fullName>CATEGORIAS</fullName>
            </value>
            <value>
                <fullName>CLASSES DE TESTE</fullName>
            </value>
            <value>
                <fullName>CONSOLE DE ATENDIMENTO</fullName>
            </value>
            <value>
                <fullName>CONTROLADOR</fullName>
            </value>
            <value>
                <fullName>FILAS</fullName>
            </value>
            <value>
                <fullName>FORMAS DE PAGAMENTO</fullName>
            </value>
            <value>
                <fullName>FRETES</fullName>
            </value>
            <value>
                <fullName>GRUPO DE CONTAS E PREÇOS</fullName>
            </value>
            <value>
                <fullName>INTERFACE DE USUARIO</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>NECESSIDADE DE THIRD PARTY</fullName>
            </value>
            <value>
                <fullName>OBJETO</fullName>
            </value>
            <value>
                <fullName>ORDENS</fullName>
            </value>
            <value>
                <fullName>ORIGENS</fullName>
            </value>
            <value>
                <fullName>PROCESSO DE APROVAÇÃO</fullName>
            </value>
            <value>
                <fullName>PRODUTOS</fullName>
            </value>
            <value>
                <fullName>PROFILE</fullName>
            </value>
            <value>
                <fullName>REGRAS DE NEGOCIO</fullName>
            </value>
            <value>
                <fullName>REGRAS DE VALIDAÇÃO</fullName>
            </value>
            <value>
                <fullName>RELATORIO</fullName>
            </value>
            <value>
                <fullName>REPORT DASHBOARD</fullName>
            </value>
            <value>
                <fullName>SERVIÇO</fullName>
            </value>
            <value>
                <fullName>SKILL</fullName>
            </value>
            <value>
                <fullName>SLA</fullName>
            </value>
            <value>
                <fullName>STATUS</fullName>
            </value>
            <value>
                <fullName>STOREFRONT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>