force-app/main/default/objects/Develop_Task__c/fields/HorasTabela__c.field-meta.xml
<CustomField>
    <fullName>HorasTabela__c</fullName>
    <label>Horas Tabela</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>