force-app/main/default/objects/Develop_Task__c/fields/Hrs_Spent__c.field-meta.xml
<CustomField>
    <fullName>Hrs_Spent__c</fullName>
    <label>Hrs Spent</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>