force-app/main/default/objects/Develop_Task__c/fields/NomeComponente__c.field-meta.xml
<CustomField>
    <fullName>NomeComponente__c</fullName>
    <label>Nome Componente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>