force-app/main/default/objects/Develop_Task__c/fields/NumberComponents__c.field-meta.xml
<CustomField>
    <fullName>NumberComponents__c</fullName>
    <label>Number of Components</label>
    <summaryForeignKey>Components__c.Develop_Task__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>