force-app/main/default/objects/Develop_Task__c/fields/Projeto__c.field-meta.xml
<CustomField>
    <fullName>Projeto__c</fullName>
    <defaultValue>&quot;Connect&quot;</defaultValue>
    <label>Projeto</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>Connect</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>