force-app/main/default/objects/Develop_Task__c/fields/Responsavel__c.field-meta.xml
<CustomField>
    <fullName>Responsavel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsável</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tarefas_do_Projeto</relationshipName>
    <type>Lookup</type>
</CustomField>