force-app/main/default/objects/Develop_Task__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requirement Analysis</fullName>
            </value>
            <value>
                <fullName>Parametrization</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>