force-app/main/default/objects/Develop_Task__c/fields/TaskWithoutComponents__c.field-meta.xml
<CustomField>
    <fullName>TaskWithoutComponents__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this field if for this Task no Components were created.</inlineHelpText>
    <label>Task Without Components</label>
    <type>Checkbox</type>
</CustomField>