force-app/main/default/objects/Develop_Task__c/fields/Work__c.field-meta.xml
<CustomField>
    <fullName>Work__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work</label>
    <referenceTo>Work__c</referenceTo>
    <relationshipLabel>Develop Tasks</relationshipLabel>
    <relationshipName>Develop_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>