force-app/main/default/objects/Develop_Task__c/validationRules/Concluded_Needs_Components.validationRule-meta.xml
<ValidationRule>
    <fullName>Concluded_Needs_Components</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Concluded&quot;),
NumberComponents__c = 0,
NOT(TaskWithoutComponents__c)
)</errorConditionFormula>
    <errorDisplayField>TaskWithoutComponents__c</errorDisplayField>
    <errorMessage>Please inform which components where created for this Task. If no components where created, please specify in the checkbox &quot;Task Without Components&quot;.</errorMessage>
</ValidationRule>