force-app/main/default/objects/Develop_Task__c/validationRules/Hrs_Spent_for_Close.validationRule-meta.xml
<ValidationRule>
    <fullName>Hrs_Spent_for_Close</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;Concluded&quot;) &amp;&amp;  ISBLANK(Hrs_Spent__c)</errorConditionFormula>
    <errorDisplayField>Hrs_Spent__c</errorDisplayField>
    <errorMessage>Please fill in the Hours spent.</errorMessage>
</ValidationRule>