force-app/main/default/objects/Develop_Task__c/listViews/Minhas_Tarefas.listView-meta.xml
<ListView>
    <fullName>Minhas_Tarefas</fullName>
    <columns>NAME</columns>
    <columns>Task_Type__c</columns>
    <columns>Subject__c</columns>
    <columns>Work__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Canceled,Concluded</value>
    </filters>
    <label>Minhas Tarefas</label>
</ListView>